# BM3-Mathbasic

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  a.txt  xmake.lua
example/: a.txt  b.txt
include/: compile.h
include/ast/: astnode.h  function.h  nodes.h  rootnode.h  variable.h
include/ast/expression/: callfuncexpr.h  condexpr.h  valexpr.h  valexprlist.h
include/ast/identifier/: identifier.h  identifierlist.h  number.h
include/ast/statement/: assignstmt.h  defstmt.h  doloopstmt.h  elsestmt.h  ifstmt.h  inputstmt.h  printstmt.h  retstmt.h  whilestmt.h
include/lex/: lexer.h
include/parse/: parse.h
include/vm/: vm.h
src/: bm3.cc  compile.cc
src/lex/: lexer.cc
src/parse/: parse.cc
wasm/: compiler.js  compiler.wasm  test.js  test.wasm
